<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sweep_ros</name>
    <version>0.3.0</version>
    <description>The sweep_ros package</description>

    <maintainer email="esimkowitz@wustl.edu">Evan Simkowitz</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_msgs</depend>
    <exec_depend>pointcloud_to_laserscan</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
